--- a/client/src/Components/About/About.css
+++ b/client/src/Components/About/About.css
@@ -71,3 +71,12 @@
           margin-top: 10px;
           margin-bottom: 10px;
 }
+
+
+.about .personalInfo{
+          margin-left: 50px;
+          margin-top: 100px;
+}
+.about .personalInfo .editInfo .btn{
+          font-size: 25px;
+}
