--- a/client/src/Components/Portfolio/ChangePortfolio/EditProject.css
+++ b/client/src/Components/Portfolio/ChangePortfolio/EditProject.css
@@ -31,6 +31,12 @@
           font-size: 30px;
           border-radius: 10px;
 }
+.editProject .edit .form textarea{
+          width: 400px;
+          padding-left: 10px;
+          font-size: 30px;
+          border-radius: 10px;
+}
 
 .editProject .edit .form button {
           width: 400px;
