--- a/client/src/Components/Portfolio/Portfolio.css
+++ b/client/src/Components/Portfolio/Portfolio.css
@@ -100,3 +100,88 @@
 .portfolio .project .show .data:hover p {
           display: block;
 }
+
+
+
+
+
+
+/* certificate */
+.portfolio .certificate {
+          margin-top: 200px;
+          margin-bottom: 200px;
+}
+
+.portfolio .certificate h1 {
+          color: rgb(192, 53, 53);
+          text-decoration: underline;
+}
+
+.portfolio .certificate .add .box {
+          width: 300px;
+          height: 300px;
+          background-color: rgb(50, 190, 190);
+          text-align: center;
+          border-radius: 10px;
+          cursor: pointer;
+}
+
+.portfolio .certificate .add .box i {
+          font-size: 200px;
+          margin-top: 50px;
+}
+
+.portfolio .certificate .show {
+          margin-top: 50px;
+          margin-bottom: 50px;
+          display: flex;
+          flex-wrap: wrap;
+}
+
+.portfolio .certificate .show .data {
+          width: 300px;
+          background-color: aqua;
+          border-radius: 10px;
+          margin-bottom: 50px;
+          margin-right: 50px;
+          cursor: pointer;
+}
+
+.portfolio .certificate .show .data:hover {
+          background-color: rgb(245, 85, 85);
+}
+
+.portfolio .certificate .show .data img {
+          width: 100%;
+          height: 200px;
+          border-radius: 10px;
+          cursor: pointer;
+}
+
+.portfolio .certificate .show .data h3 {
+          padding-left: 10px;
+          padding-top: 20px;
+          padding-bottom: 20px;
+}
+
+.portfolio .certificate .show .data p {
+          font-size: 23px;
+          padding-left: 10px;
+          padding-right: 10px;
+          cursor: pointer;
+          display: none;
+}
+
+.portfolio .certificate .show .data:hover p {
+          display: block;
+}
+
+.portfolio .certificate .show .data .deleteIcon {
+          margin-left: 250px;
+}
+
+.portfolio .certificate .show .data .deleteIcon i {
+          padding-bottom: 30px;
+          font-size: 25px;
+          cursor: pointer;
+}
