--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -1,14 +1,65 @@
-*{
+* {
           margin: 0;
           padding: 0;
 }
-.home{
+
+.home {
           margin-top: 200px;
           margin-left: 100px;
 }
-.home .tag{
+
+.home .tag {
           cursor: pointer;
 }
-.home .tag span{
+
+.home .tag span {
           color: red;
+}
+
+.home .tag p {
+          margin-top: 30px;
+          font-size: 18px;
+}
+
+.home .tag button {
+          width: 200px;
+          margin-top: 30px;
+          font-size: 30px;
+}
+
+.home .img {
+          margin-left: 60%;
+          background-color: rgb(58, 109, 153);
+          width: 300px;
+          height: 400px;
+          border-radius: 10px;
+          position: absolute;
+          top: 150px;
+          bottom: 100px;
+          cursor: pointer;
+}
+
+.home .img .button {
+          margin-top: 401px;
+}
+
+.home .img .button button {
+          width: 300px;
+          font-size: 25px;
+          display: none;
+          cursor: pointer;
+}
+
+.home .img:hover button {
+          display: block;
+}
+
+.home .img img {
+          width: 300px;
+          height: 400px;
+          border-radius: 10px;
+          position: absolute;
+          top: 150px;
+          bottom: 100px;
+          cursor: pointer;
 }
