--- a/client/src/Components/Home/Home.css
+++ b/client/src/Components/Home/Home.css
@@ -12,6 +12,11 @@
           cursor: pointer;
 }
 
+.home .tag button {
+          font-size: 30px;
+          width: 300px;
+}
+
 .home .tag span {
           color: red;
 }
@@ -21,45 +26,46 @@
           font-size: 18px;
 }
 
-.home .tag button {
-          width: 200px;
-          margin-top: 30px;
-          font-size: 30px;
+.home .img {
+          margin-top: 50px;
 }
 
-.home .img {
-          margin-left: 60%;
-          background-color: rgb(58, 109, 153);
+.home .img .show {
+          margin-bottom: 10px;
+}
+
+.home .img .data {
+          display: flex;
+          flex-wrap: wrap;
+}
+
+.home .img .data .data-sub {
           width: 300px;
-          height: 400px;
+          margin-right: 50px;
+          margin-bottom: 50px;
+}
+
+.home .img .data .data-sub img {
+          width: 300px;
           border-radius: 10px;
-          position: absolute;
-          top: 150px;
-          bottom: 100px;
           cursor: pointer;
 }
 
-.home .img .button {
-          margin-top: 401px;
+.home .img .data .data-sub .deleteIcon {
+          margin-left: 250px;
+}
+
+.home .img .data .data-sub .deleteIcon i {
+          font-size: 30px;
+          cursor: pointer;
+          display: none;
+}
+
+.home .img .data .data-sub:hover i {
+          display: block;
 }
 
 .home .img .button button {
           width: 300px;
-          font-size: 25px;
-          display: none;
-          cursor: pointer;
-}
-
-.home .img:hover button {
-          display: block;
-}
-
-.home .img img {
-          width: 300px;
-          height: 400px;
-          border-radius: 10px;
-          position: absolute;
-          top: 150px;
-          bottom: 100px;
-          cursor: pointer;
+          font-size: 30px;
 }
